# ADXL-Driver

./: .gitignore  README.md
src/: CMakeLists.txt  adxl343.c  adxl343.h
